Update environment configuration, package scripts, and add TypeScript support. Removed old migration script and adjusted paths for the new structure.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "myscholar-backend",
   "version": "1.0.0",
   "description": "Backend system for MyScholar with role-based authentication",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "migrate": "ts-node src/migrations/migrate.ts",
+    "test": "jest"
   },
   "keywords": ["education", "attendance", "role-based-auth"],
   "author": "MyScholar Team",
@@ -24,6 +25,16 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.8",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
