--- a/env.example
+++ b/env.example
@@ -1,5 +1,14 @@
-PORT=3000
-JWT_SECRET=your-super-secret-jwt-key-here
+# Database
+DATABASE_PATH=./database.sqlite
+
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=24h
-DB_PATH=./database.sqlite
+
+# Server
+PORT=3000
 NODE_ENV=development
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
