--- a/package.json
+++ b/package.json
@@ -10,31 +10,36 @@
     "migrate": "ts-node src/migrations/migrate.ts",
     "test": "jest"
   },
-  "keywords": ["education", "attendance", "role-based-auth"],
+  "keywords": [
+    "education",
+    "attendance",
+    "role-based-auth"
+  ],
   "author": "MyScholar Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "dotenv": "^16.3.1"
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "typescript": "^5.3.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "typescript": "^5.3.3"
   }
 }
